5 July 2024: Wouter
	- Fix for neater printout for error for missing DS response.
	- Fix neater printout.
	- Fix #1099: Unbound core dump on SIGSEGV.

4 July 2024: Wouter
	- Fix to print details about the failure to lookup a DNSKEY record
	  when validation fails due to the missing DNSKEY. Also for key prime
	  and DS lookups.

3 July 2024: Yorgos
	- Fix for repeated use of a DNAME record: first overallocate and then
	  move the exact size of the init value to avoid false positive heap
	  overflow reads from address sanitizers.

3 July 2024: Wouter
	- Fix #144: Port ipset to BSD pf tables.
	- Add unit test skip files and bison and flex output to gitignore.
	- Fix to use modstack_init in zonemd unit test.
	- Fix to remove unneeded linebreak in fptr_wlist.c.
	- Fix compile warnings in fptr_wlist.c.

2 July 2024: Wouter
	- Fix to remove unused include from the readzone test program.
	- Fix unused variable warning in do_cache_remove.
	- Fix compile warning in worker pthread id printout.

17 June 2024: Wouter
	- Fix ip-ratelimit-cookie setting, it was not applied.

26 June 2024: Yorgos
	- Explicitly set the RD bit for the mesh query flags when prefetching.
	  These queries have no waiting client but they need to be treated as
	  recursive.

21 June 2024: Yorgos
	- Fix pkg-config availability check in dnstap/dnstap.m4 and
	  systemd.m4.

19 June 2024: Yorgos
	- Fix #1092: Ubuntu 22.04 Jammy fails to compile unbound 1.20.0; by
	  adding helpful text for the Python interpreter version and allowing
	  the default pkg-config unavailability error message to be shown.

17 June 2024: Wouter
	- Fix #1091: Build fails with OpenSSL >= 3.0 built with
	  OPENSSL_NO_DEPRECATED.

7 June 2024: Wouter
	- Add unit test for validation of repeated use of a DNAME record.

6 June 2024: Wouter
	- Fix memory leak in setup of dsa sig.
	- Fix typos for 'the the' in text.
	- Fix validation for repeated use of a DNAME record.

4 June 2024: Yorgos